--- a/git_sample.html
+++ b/git_sample.html
@@ -6,5 +6,7 @@
 	<body>
 		<h1>Git Sample Page</h1>
 		<p>Our sample Git project file</p>
+		<p>Git is awesome!</p>
+        <p>Github is awesome too!</p>
 	</body>
 </html>
